--- a/teammembers.htm
+++ b/teammembers.htm
@@ -124,7 +124,7 @@ p
 <font size="4"><b>Past members:</b></font></p>
 <ul>
 	<li>
-	<p class="title" style="line-height: 150%; ">Dr. Xiaobai L<span lang="en-us">I 
+	<p class="title" style="line-height: 150%; ">Dr. Xiaobai L<span lang="en-us">i 
 			(Assistant Professor of CMVS, Oulu)</span></p></li>
 	<li>
 	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Quang 
