--- a/publications.htm
+++ b/publications.htm
@@ -150,59 +150,70 @@ Jan. 2018.</font></p>
 <p class="MsoNormal" style="margin-top:0.5cm; margin-bottom:0.5cm">
 <span lang="en-us"><font size="5"><b>2021</b></font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;252. Zitong 
+<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;25<span lang="en-us">4</span>. Zitong 
 Yu, Jun Wan, Yunxiao Qin, Xiaobai Li, Stan Z. Li and <b>Guoying Zhao</b>. <u>NAS-FAS: Static-Dynamic Central Difference Network Search for Face Anti-Spoofing</u>. 
 IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI). 
 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;251. 
+<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;25<span lang="en-us">3</span>. 
 Wei Peng, Xiaopeng Hong, <b>Guoying Zhao</b>. <u>Graph Triplet Pooling for 3D 
 Skeleton Based Action Recognition</u>. Pattern Recognition. 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span style="font-family: 'Times New Roman',serif"><font size="4">&nbsp;250.&nbsp;Xin Shu, <b>Guoying Zhao</b>. <u>Scalable multi-label canonical correlation analysis 
+<span style="font-family: 'Times New Roman',serif"><font size="4">
+<span lang="en-us">&nbsp;252.</span> Zitong Yu, Benjia Zhou, Jun Wan, Pichao 
+Wang, Haoyu Chen, Xin Liu, Stan Z. Li, <b>Guoying Zhao</b>. <u>Searching 
+Multi-Rate and Multi-Modal Temporal Enhanced Networks for Gesture Recognition</u>. 
+IEEE Transactions on Image Processing (TIP), 2021.</font></span></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<span style="font-family: 'Times New Roman',serif"><font size="4">&nbsp;25<span lang="en-us">1</span>.&nbsp;Xin Shu, <b>Guoying Zhao</b>. <u>Scalable multi-label canonical correlation analysis 
 for cross-modal retrieval</u>. Pattern Recognition. 2021.</font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">49</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">50</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
 Ahola, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Leaders and followers identified 
 by emotional mimicry during collaborative learning: A facial expression 
 recognition study on emotional valence</u>. IEEE Transactions on Affective 
 Computing, 2021. </font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">48</span>. Mohammad Sabokrou, Mahmood Fathy, 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">49</span>. Mohammad Sabokrou, Mahmood Fathy, 
 <b>Guoying Zhao</b>, and Ehsan Adeli. <u>Deep End-to-End 
 One-Class Classifier</u>. IEEE Transactions on Neural Networks and Learning 
 Systems. 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">7</span>. Wei Ke, Jie Chen, Jianbin Jiao, <b>
+<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">8</span>. Wei Ke, Jie Chen, Jianbin Jiao, <b>
 Guoying Zhao</b>, and Qixiang Ye. <u>SRN: Side-output Residual Network for 
 Object Reflection Symmetry Detection and Beyond</u>. IEEE Transactions on Neural 
 Networks and Learning Systems. 2021. </font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;246. </font></span>
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;247. </font></span>
 <font face="Times New Roman" size="4">Xin Liu, <b>Guoying Zhao</b>. <u>3D 
 Skeletal Gesture Recognition via Discriminative Coding on Time-Warping Invariant 
 Riemannian Trajectories</u>. IEEE Trans. on Multimedia.<span lang="en-us"> 2021.</span>
 </font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">5</span>. Wei Peng, Xiaopeng Hong, <b>
+<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">6</span>. Wei Peng, Xiaopeng Hong, <b>
 Guoying Zhao</b>. <u>Adaptive Modality Distillation for Separable Multimodal 
 Sentiment Analysis</u>. IEEE Intelligent Systems. 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;244. </span>Yante 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;245. </span>Yante 
 Li, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Micro-expression Action Unit 
 Detection with Spatial and Channel Attention</u>. Neurocomputing. 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>2<span lang="EN-US" style="line-height: 115%">43. Khanh Tran, Quang-Nhat Vo, Xiaopeng Hong, Xiaobai Li, <b>Guoying Zhao</b>. <u>
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>2<span lang="EN-US" style="line-height: 115%">44. Khanh Tran, Quang-Nhat Vo, Xiaopeng Hong, Xiaobai Li, <b>Guoying Zhao</b>. <u>
 Micro-expression spotting: A new benchmark</u>. Neurocomputing, 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;242. Wei Peng, Jingang Shi, Tuomas 
+<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">3</span>. Wei Peng, Jingang Shi, Tuomas 
 Varanka, <b>Guoying Zhao</b>. <u>Rethinking the ST-GCNs for 3D Skeleton-based 
 Human Action Recognition</u>. Neurocomputing. 2021 (2)</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;241. Wei Peng, Jingang Shi, <b>Guoying Zhao</b>. 
+<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">2</span>. Wei Peng, Jingang Shi, <b>Guoying Zhao</b>. 
 <u>Spatial Temporal Graph Deconvolutional Network for 
 Skeleton-based Human Action Recognition</u>. IEEE Signal Processing Letters. 
 2021.</font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;241.</span> 
+Yanying Liang, Wei Peng, Zhu-Jun Zheng, Olli Silven, <b>Guoying Zhao</b>. <u>A 
+hybrid quantum-classical neural network with deep residual learning</u>. Neural 
+Networks. 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;240. Tong Zhang, Yuan Zong, Wenming Zheng, 
 C. L. Philip Chen, Xiaopeng Hong, Chuangao Tang, Zhen Cui, Guoying Zhao. 
