--- a/personal.htm
+++ b/personal.htm
@@ -45,11 +45,11 @@ Chinese Academy of Sciences, Beijing, China, in 2005.&nbsp; <span lang="en-us">
 She got the Academy Postdoctoral position in 2007, i</span>n 2011, she was 
 selected to the highly competitive Academy Research Fellow position, and in 
 2020, she was selected to one of the ten Academy Professors. She has 
-authored or co-authored more than <span lang="en-us">24</span>0 papers in journals and conferences, and 
+authored or co-authored more than <span lang="en-us">26</span>0 papers in journals and conferences, and 
 has served </font></span><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer for many journals and conferences. Her papers have 
-currently over 14800 citations in Google Scholar (h-index 
-55). She is Co-Program chair of ACM International Conference on Multimodal 
+currently over 1<span lang="en-us">54</span>00 citations in Google Scholar (h-index 
+5<span lang="en-us">7</span>). She is Co-Program chair of ACM International Conference on Multimodal 
 Interaction 2021 (ICMI), and Special 
 Sessions/Panels Chairs for FG 2023. She was general chair for ICBEA (2019, 2020), Co-Chair for Late Breaking 
 Results of ICMI 2019, co-publicity c</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">hair 
@@ -156,6 +156,9 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		Deadline: <b>Apr. 15, 2021</b>.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
+		<p style="margin-top: 24px; margin-bottom: 24px">
+		<font face="Times New Roman">2021.06: Muzammil recently won the Tauno 
+		T&ouml;nning Foundation Grant.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><span lang="en-us">
 		<font face="Times New Roman">2021.03: </font></span>
 		<font face="Times New Roman"><b>The 2nd Multimodal Sentiment Analysis 
