--- a/publications.htm
+++ b/publications.htm
@@ -147,68 +147,86 @@ Jan. 2018.</font></p>
 <a target="_blank" href="https://www.oulu.fi/blogs/science-with-arctic-attitude/emotion-ai">Emotion AI</a>: </font>
 <span lang="EN-US">
 <font size="4">Nov. 2020.</font></span></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="5"><b>2022</b></font></p>
+<p style="text-indent: 6px; margin: 6.0pt 0in" class="MsoNormal">
+<font face="Times New Roman" size="4"><span lang="en-us">255. Henglin Shi, Wei 
+Peng, Haoyu Chen, Xin Liu, <b>Guoying Zhao</b>. </span><u>Multi-scale 3D Shift 
+Graph Convolution Network for Emotion<span lang="en-us"> </span>Recognition from 
+Human Actions</u><span lang="en-us"><u>.</u> </span>IEEE Intelligent Systems. 
+202<span lang="en-us">2</span>.</font></p>
 <p class="MsoNormal" style="margin-top:0.5cm; margin-bottom:0.5cm">
 <span lang="en-us"><font size="5"><b>2021</b></font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;25<span lang="en-us">4</span>. Zitong 
+<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;25<span lang="en-us">6</span>. Zitong 
 Yu, Jun Wan, Yunxiao Qin, Xiaobai Li, Stan Z. Li and <b>Guoying Zhao</b>. <u>NAS-FAS: Static-Dynamic Central Difference Network Search for Face Anti-Spoofing</u>. 
 IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI). 
 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;25<span lang="en-us">3</span>. 
+<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;25<span lang="en-us">5</span>. 
 Wei Peng, Xiaopeng Hong, <b>Guoying Zhao</b>. <u>Graph Triplet Pooling for 3D 
 Skeleton Based Action Recognition</u>. Pattern Recognition. 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <span style="font-family: 'Times New Roman',serif"><font size="4">
-<span lang="en-us">&nbsp;252.</span> Zitong Yu, Benjia Zhou, Jun Wan, Pichao 
+<span lang="en-us">&nbsp;254.</span> Zitong Yu, Benjia Zhou, Jun Wan, Pichao 
 Wang, Haoyu Chen, Xin Liu, Stan Z. Li, <b>Guoying Zhao</b>. <u>Searching 
 Multi-Rate and Multi-Modal Temporal Enhanced Networks for Gesture Recognition</u>. 
 IEEE Transactions on Image Processing (TIP), 2021.</font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span style="font-family: 'Times New Roman',serif"><font size="4">&nbsp;25<span lang="en-us">1</span>.&nbsp;Xin Shu, <b>Guoying Zhao</b>. <u>Scalable multi-label canonical correlation analysis 
+<span style="font-family: 'Times New Roman',serif"><font size="4">&nbsp;25<span lang="en-us">3</span>.&nbsp;Xin Shu, <b>Guoying Zhao</b>. <u>Scalable multi-label canonical correlation analysis 
 for cross-modal retrieval</u>. Pattern Recognition. 2021.</font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">50</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">52</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
 Ahola, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Leaders and followers identified 
 by emotional mimicry during collaborative learning: A facial expression 
 recognition study on emotional valence</u>. IEEE Transactions on Affective 
 Computing, 2021. </font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">49</span>. Mohammad Sabokrou, Mahmood Fathy, 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">51</span>. Mohammad Sabokrou, Mahmood Fathy, 
 <b>Guoying Zhao</b>, and Ehsan Adeli. <u>Deep End-to-End 
 One-Class Classifier</u>. IEEE Transactions on Neural Networks and Learning 
 Systems. 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">8</span>. Wei Ke, Jie Chen, Jianbin Jiao, <b>
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">50</span>. Wei Ke, Jie Chen, Jianbin Jiao, <b>
 Guoying Zhao</b>, and Qixiang Ye. <u>SRN: Side-output Residual Network for 
 Object Reflection Symmetry Detection and Beyond</u>. IEEE Transactions on Neural 
 Networks and Learning Systems. 2021. </font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;247. </font></span>
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;249. </font></span>
 <font face="Times New Roman" size="4">Xin Liu, <b>Guoying Zhao</b>. <u>3D 
 Skeletal Gesture Recognition via Discriminative Coding on Time-Warping Invariant 
 Riemannian Trajectories</u>. IEEE Trans. on Multimedia.<span lang="en-us"> 2021.</span>
 </font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">6</span>. Wei Peng, Xiaopeng Hong, <b>
+<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">8</span>. Wei Peng, Xiaopeng Hong, <b>
 Guoying Zhao</b>. <u>Adaptive Modality Distillation for Separable Multimodal 
 Sentiment Analysis</u>. IEEE Intelligent Systems. 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;245. </span>Yante 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;247. </span>Yante 
 Li, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Micro-expression Action Unit 
 Detection with Spatial and Channel Attention</u>. Neurocomputing. 2021.</font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;246.</span> 
+Muzammil Behzad, Nhat Vo, Xiaobai Li, and <b>Guoying Zhao</b>. <u>Towards 
+Reading Beyond Faces for Sparsity-Aware 3D/4D Affect Recognition</u>. 
+Neurocomputing. 2021<span lang="en-us">.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>2<span lang="EN-US" style="line-height: 115%">44. Khanh Tran, Quang-Nhat Vo, Xiaopeng Hong, Xiaobai Li, <b>Guoying Zhao</b>. <u>
+<font face="Times New Roman" size="4">&nbsp;245. Khanh Tran, Quang-Nhat Vo, Xia<span lang="EN-US" style="line-height: 115%">openg Hong, Xiaobai Li, <b>Guoying Zhao</b>. <u>
 Micro-expression spotting: A new benchmark</u>. Neurocomputing, 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">3</span>. Wei Peng, Jingang Shi, Tuomas 
+<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">4</span>. Wei Peng, Jingang Shi, Tuomas 
 Varanka, <b>Guoying Zhao</b>. <u>Rethinking the ST-GCNs for 3D Skeleton-based 
-Human Action Recognition</u>. Neurocomputing. 2021 (2)</font></p>
+Human Action Recognition</u>. Neurocomputing. 2021</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;24<span lang="en-us">2</span>. Wei Peng, Jingang Shi, <b>Guoying Zhao</b>. 
-<u>Spatial Temporal Graph Deconvolutional Network for 
-Skeleton-based Human Action Recognition</u>. IEEE Signal Processing Letters. 
+<font face="Times New Roman" size="4">&nbsp;243. Wei Peng, Jingang Shi, <b>Guoying Zhao</b>. 
+Spatial Temporal Graph Deconvolutional Network for 
+Skeleton-based Human Action Recognition. IEEE Signal Processing Letters. 
 2021.</font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;242. Zitong Yu, Xiaobai Li, Pichao 
+Wang, <b>Guoying Zhao</b>. <u>TransRPPG: Remote Photoplethysmography Transformer 
+for 3D Mask Face Presentation Attack Detection</u>. IEEE Signal Processing 
+Letters. 2021 (2)</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;241.</span> 
 Yanying Liang, Wei Peng, Zhu-Jun Zheng, Olli Silven, <b>Guoying Zhao</b>. <u>A 
@@ -216,8 +234,8 @@ hybrid quantum-classical neural network with deep residual learning</u>. Neural
 Networks. 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;240. Tong Zhang, Yuan Zong, Wenming Zheng, 
-C. L. Philip Chen, Xiaopeng Hong, Chuangao Tang, Zhen Cui, Guoying Zhao. 
-Cross-Database Micro-Expression Recognition: A Benchmark. IEEE Transactions on 
+C. L. Philip Chen, Xiaopeng Hong, Chuangao Tang, Zhen Cui, <b>Guoying Zhao</b>. 
+<u>Cross-Database Micro-Expression Recognition: A Benchmark</u>. IEEE Transactions on 
 Knowledge and Data Engineering, 2021.</font></p>
 <h1 style="text-align: justify; text-justify: inter-ideograph; margin-top: 6.0pt">
 <font size="4"><span style="font-weight: 400">&nbsp;239.</span></font><font face="Times New Roman" size="4"><span style="font-weight: 400"> 
@@ -227,8 +245,8 @@ automatic face analytics for human behavior</u>. Image and Vision Computing,
 2021. </span></font></h1>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;238. Xin 
-Liu, Henglin Shi, Haoyu Chen, Zitong Yu, Xiaobai Li, Guoying Zhao. iMiGUE: An Identity-free Video Dataset for Micro-Gesture Understanding and 
-Emotion Analysis. CVPR, 2021. 
+Liu, Henglin Shi, Haoyu Chen, Zitong Yu, Xiaobai Li, <b>Guoying Zhao</b>. <u>iMiGUE: An Identity-free Video Dataset for Micro-Gesture Understanding and 
+Emotion Analysis</u>. CVPR, 2021. 
 (Acceptance rate: 27%)</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;237. Ruijing Yang,&nbsp; Ziyu Guan, 
