--- a/personal.htm
+++ b/personal.htm
@@ -37,19 +37,21 @@ h3
 <p style="line-height: 150%" align="justify">
 <span lang="EN-US" style="font-family: Times New Roman; font-weight: normal">
 <font size="4">
-&nbsp;&nbsp;&nbsp; Guoying Zhao is currently a P</font></span><span style="font-family: Times New Roman; font-weight: normal"><font size="4">rofessor 
+&nbsp;&nbsp;&nbsp; Guoying Zhao is currently a full p</font></span><span style="font-family: Times New Roman; font-weight: normal"><font size="4">rofessor 
+(tenured, from 2017) 
 with the Center for Machine Vision and Signal Analysis, University of Oulu, 
-Finland, where she has been a senior researcher since 2005 and an Associate 
-Professor since 2014. She received the Ph.D. degree in computer science from the 
+Finland, where she was a senior researcher (2005-2007), Academy postdoctoral 
+researcher (2008-2011), Academy research fellow (2011-2017) and Associate 
+Professor (tenure track, 2014-2017). She received the Ph.D. degree in computer science from the 
 Chinese Academy of Sciences, Beijing, China, in 2005.&nbsp; <span lang="en-us">
-She got the Academy Postdoctoral position in 2007, i</span>n 2011, she was 
-selected to the highly competitive Academy Research Fellow position, and in 
+She got the Academy Postdoctoral position in 2007, </span>was 
+selected in 2011 to the highly competitive Academy Research Fellow position, and in 
 2020, she was selected to one of the ten Academy Professors. She has 
 authored or co-authored more than <span lang="en-us">26</span>0 papers in journals and conferences, and 
 has served </font></span><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer for many journals and conferences. Her papers have 
-currently over 1<span lang="en-us">54</span>00 citations in Google Scholar (h-index 
-5<span lang="en-us">7</span>). She is Co-Program chair of ACM International Conference on Multimodal 
+currently over 1<span lang="en-us">62</span>00 citations in Google Scholar (h-index 
+5<span lang="en-us">9</span>). She is Co-Program chair of ACM International Conference on Multimodal 
 Interaction 2021 (ICMI), and Special 
 Sessions/Panels Chairs for FG 2023. She was general chair for ICBEA (2019, 2020), Co-Chair for Late Breaking 
 Results of ICMI 2019, co-publicity c</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">hair 
@@ -58,8 +60,8 @@ editor for Pattern Recognition, IEEE Transactions on Circuits and Systems for
 Video Technology, and Image and Vision Computing Journals.</font></span><span lang="EN-US" style="font-size: 12.0pt; line-height: 115%; font-family: Arial,sans-serif">
 </span><span style="font-family: Times New Roman; font-weight: normal">
 <font size="4">She has lectured tutorials at <span lang="en-us">FG 2018, </span>ICPR 2006, ICCV 2009, 
-and SCIA 2013, and authored/edited three books and <span lang="en-us">eight</span> special issues in 
-journals. Dr. Zhao was a Co-Chair of 17 International Workshops / special 
+and SCIA 2013, and authored/edited three books and <span lang="en-us">nine</span> special issues in 
+journals. Dr. Zhao was a Co-Chair of 19 International Workshops / special 
 sessions in top venues, such as ICCV, 
 CVPR, ECCV, ACCV and FG. Her students <span lang="en-us">and 
 researchers </span>are 
@@ -69,7 +71,8 @@ Scholarsh</font></span><font size="4"><span style="font-family: Times New Roman;
 Endeavour Research Fellowship, Ta</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">uno T&ouml;nning Research funding<span lang="en-us">, 
 Kauta Foundation grant</span> 
 and Jorma Ollila grant. </font> </span><font size="4">
-<span style="font-family: Times New Roman; font-weight: normal">She is IEEE 
+<span style="font-family: Times New Roman; font-weight: normal">She is IAPR 
+Fellow, AAIA Fellow, IEEE 
 Senior Member. Her current research interests include image and video 
 descriptors, gait analysis, dynamic-texture recognition, facial-expression 
 recognition, human motion analysis, and person identification. Her research has 
