--- a/teammembers.htm
+++ b/teammembers.htm
@@ -40,9 +40,6 @@ p
 		<ul>
 			<li>
 			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. 
-			Xin LIU (Academy Postdoctoral Researcher)</span></p></li>
-			<li>
-			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. 
 			Kevin CHENG</span></p></li>
 		</ul>
 		</td>
@@ -59,10 +56,6 @@ p
 			<li>
 			<p class="title" style="line-height: 200%">
 			Ms. Yante <span lang="en-us">LI</span></p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			<span lang="en-us">Mr. Seyednavid MOHAMMADIFOUMANI</span></p>
 			</li>
 			<li>
 			<p class="title" style="line-height: 200%">
@@ -108,6 +101,12 @@ p
 			<p class="title" style="line-height: 200%">Dr. 
 			Yuhua FAN (Liaocheng University): Oct. 2019 - Oct. 2021</li>
 			<li>
+			<p class="title" style="line-height: 200%"><span lang="en-us">Assoc. 
+			Prof. 
+			</span>Xu C<span lang="en-us">HENG</span> (Nanjing University of Information Science and 
+			Technology, China): July 20<span lang="en-us">21</span> - 
+			<span lang="en-us">July</span>. 20<span lang="en-us">22</span></li>
+			<li>
 			<p class="title" style="line-height: 200%">Ms. Yanying LIANG (South 
 			China University of Technology): Oct. 2019 - Oct. 2021</li>
 			<li>
@@ -123,6 +122,10 @@ p
 <p class="title" style="line-height: 150%; margin-top:1cm">
 <font size="4"><b>Past members:</b></font></p>
 <ul>
+	<li>
+	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. 
+			Xin LIU (Associate </span>Professor, Lappeenranta-Lahti University 
+	of Technology (LUT), Finland)</p></li>
 	<li>
 	<p class="title" style="line-height: 150%; ">Dr. Xiaobai L<span lang="en-us">i 
 			(Assistant Professor of CMVS, Oulu)</span></p></li>
