--- a/teammembers.htm
+++ b/teammembers.htm
@@ -41,6 +41,12 @@ p
 			<li>
 			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. 
 			Kevin CHENG</span></p></li>
+			<li>
+			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. 
+			Qianru XU</span></p></li>
+			<li>
+			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. 
+			Hanlin MO</span></p></li>
 		</ul>
 		</td>
 		<td width="288" height="0" align="left" valign="top">
@@ -64,6 +70,10 @@ p
 			<li>
 			<p class="title" style="line-height: 200%">
 			<span lang="en-us">Mr. Wei PENG</span></p>
+			</li>
+			<li>
+			<p class="title" style="line-height: 200%">
+			<span lang="en-us">Mr. Marko SAVIC</span></p>
 			</li>
 			<li>
 			<p class="title" style="line-height: 200%">
